[package]
name = "doga-english-greetings"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A random english greetings package written for educational purposes."
homepage = "https://github.com/dogafincan"
repository = "https://github.com/dogafincan/rust-english-greetings/"
readme = "README.md"
keywords = ["random", "string"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fastrand = "1.8.0"
thiserror = "1.0.32"